exports[`test should render the create user page correctly when the user is logged in 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <div>
    <p>
      Create a User
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Email"
        type="text"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`test should render the create user page correctly when the user is logged out 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <div>
    <p>
      You must log in to view the page at 
      /createuser
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`test should render the protected page correctly when the user is logged in 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <h3>
    Protected
  </h3>
</div>
`;

exports[`test should render the protected page correctly when the user is logged out 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <div>
    <p>
      You must log in to view the page at 
      /protected
    </p>
    <form
      onSubmit={[Function]}>
      <input
        onChange={[Function]}
        placeholder="Username"
        type="text"
        value="" />
      <input
        onChange={[Function]}
        placeholder="Password"
        type="password"
        value="" />
      <input
        type="submit" />
    </form>
  </div>
</div>
`;

exports[`test should render the public page correctly when the user is logged in 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <h3>
    Public
  </h3>
</div>
`;

exports[`test should render the public page correctly when the user is logged out 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
  <h3>
    Public
  </h3>
</div>
`;

exports[`test should render the root page correctly when the user is logged in 1`] = `
<div>
  <p>
    Welcome! 
    <button
      onClick={[Function]}>
      Sign out
    </button>
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
</div>
`;

exports[`test should render the root page correctly when the user is logged out 1`] = `
<div>
  <p>
    You are not logged in.
  </p>
  <ul>
    <li>
      <a
        href="/public"
        onClick={[Function]}>
        Public Page
      </a>
    </li>
    <li>
      <a
        href="/protected"
        onClick={[Function]}>
        Protected Page
      </a>
    </li>
    <li>
      <a
        href="/createuser"
        onClick={[Function]}>
        Create User
      </a>
    </li>
  </ul>
</div>
`;
